Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -46,9 +46,17 @@ stages:
           $(tag)
     - task: HelmDeploy@0
       inputs:
+        command: 'package'
+        chartPath: 'springboot'
+    - task: HelmDeploy@0
+      inputs:
         connectionType: 'Azure Resource Manager'
         azureSubscription: 'Pay-As-You-Go (735d5c5d-6148-48b7-8f67-4af45c25fc19)'
         azureResourceGroup: 'myResourceGroup'
         kubernetesCluster: 'myAKSCluster'
         namespace: 'helm-demo'
-        command: 'ls'
+        command: 'install'
+        chartType: 'Name'
+        chartName: 'springboot'
+        releaseName: 'myrelease'
+        waitForExecution: false
