--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -44,7 +44,7 @@ stages:
         containerRegistry: $(dockerRegistryServiceConnection)
         tags: |
           $(tag)
-          'latest'
+          latest
     - task: HelmDeploy@0
       inputs:
         command: 'package'
@@ -59,5 +59,5 @@ stages:
         command: 'install'
         chartType: 'Name'
         chartName: 'springboot'
-        releaseName: 'myrelease'
+        releaseName: 'myrelease-$(Build.BuildId)'
         waitForExecution: false
