--- a/springboot/values.yaml
+++ b/springboot/values.yaml
@@ -8,7 +8,7 @@ image:
   repository: myacrrepo531.azurecr.io/akannan1087/docker-spring-boot
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: latest
+  tag: ""
 
 imagePullSecrets: []
 nameOverride: ""
