--- a/my-aks-charts/values.yaml
+++ b/my-aks-charts/values.yaml
@@ -5,7 +5,7 @@
 replicaCount: 1
 
 image:
-  repository: myacrrepo54.azurecr.io/myacrrepo54
+  repository: myacrrepo54.azurecr.io/akannan1087/docker-spring-boot
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
   tag: ""
