--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,6 +20,18 @@ stages:
     pool:
       vmImage: ubuntu-latest
     steps:
+    - 
+  - task: Maven@4
+    inputs:
+      mavenPomFile: 'pom.xml'
+      publishJUnitResults: true
+      testResultsFiles: '**/surefire-reports/TEST-*.xml'
+      javaHomeOption: 'JDKVersion'
+      mavenVersionOption: 'Default'
+      mavenAuthenticateFeed: false
+      effectivePomSkip: false
+      sonarQubeRunAnalysis: false
+
     - task: Docker@2
       displayName: Build an image
       inputs:
