Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -35,6 +35,8 @@ stages:
       inputs:
         command: build
         dockerfile: '$(Build.SourcesDirectory)/Dockerfile'
+        containerRegistry: 'Arti'
+        repository: 'docker-local'
         tags: |
           $(tag)
     - task: JFrogDocker@1
