--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,10 +26,8 @@ jobs:
     - name: SonarQube Scan
       uses: sonarsource/sonarqube-scan-action@master
       env:
-        SONAR_TOKEN: ${{ secrets.SONARQUBE_TOKEN }}
-        SONAR_HOST_URL: ${{ secrets.SONARQUBE_HOST }}
-    - name: Scan
-      run: mvn sonar:sonar
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
     - name: Build Docker image
       run: |
         docker build -t my-docker-repo .
