added workflow dispatch for triggering the build manually

--- a/.github/workflows /cicd.yml
+++ b/.github/workflows /cicd.yml
@@ -1,8 +1,12 @@
 name: CI/CD workflow for Maven Build and Sonar Code scan
+on: workflow_dispatch
+
 on:
   push:
     branches:
       - master
+  workflow_dispatch:
+
 jobs:
   build:
     runs-on: ubuntu-latest
