Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,10 +10,10 @@ pool:
   vmImage: ubuntu-latest
 
 steps:
-- task: SonarQubePrepare@5
-  inputs:
-    SonarQube: 'My_SonarQube'
-    scannerMode: 'Other'
+# - task: SonarQubePrepare@5
+#  inputs:
+#    SonarQube: 'My_SonarQube'
+#    scannerMode: 'Other'
 - task: Maven@3
   inputs:
     mavenPomFile: 'pom.xml'
