--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,3 +1,15 @@
+
+jobs:
+  cleanup:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Clean up old workflow runs
+        uses: actions/purge-workflow-runs@v1
+        with:
+          workflow-token: ${{ secrets.GITHUB_TOKEN }}
+
+
+
 name: Build
 
 on:
