--- a/.github/workflows/emm.yml
+++ b/.github/workflows/emm.yml
@@ -11,7 +11,7 @@ jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
-    permissions: read-all
+    permissions: write-all
     steps:
       - uses: actions/checkout@v2
         with:
