--- a/.github/workflows/emm.yml
+++ b/.github/workflows/emm.yml
@@ -1,3 +1,15 @@
+- name: Commit and push changes
+  run: |
+    git config --global user.name "github-actions[bot]"
+    git config --global user.email "github-actions[bot]@users.noreply.github.com"
+    git add .
+    git commit -m "Your commit message"
+    git push
+  env:
+    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+
+
 name: Build
 
 on:
