--- a/apr25-chart/values.yaml
+++ b/apr25-chart/values.yaml
@@ -7,7 +7,7 @@ replicaCount: 1
 
 # This sets the container image more information can be found here: https://kubernetes.io/docs/concepts/containers/images/
 image:
-  repository: 211223789150.dkr.ecr.us-east-1.amazonaws.com/coachak/myecr-repo
+  repository: 211223789150.dkr.ecr.us-east-1.amazonaws.com/coachak/springboot-app
   # This sets the pull policy for images.
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
